<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".ScholarActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/scholarimageView"
                android:layout_width="match_parent"
                android:layout_height="95dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="5dp"
                app:srcCompat="@drawable/daad" />

            <TextView
                android:id="@+id/scholartextView"
                android:layout_width="wrap_content"
                android:layout_height="31dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:autoText="false"
                android:text="@string/daad_name"
                android:textColor="@color/colorRed"
                android:textColorHighlight="@color/colorPrimary"
                android:textFontWeight="20"
                android:textSize="24sp"
                android:textStyle="normal|bold" />


            <TextView
                android:id="@+id/scholartextoverview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="11dp"
                android:layout_marginTop="30dp"
                android:text="Overview  "
                android:textColor="@color/colorBlue"
                android:textFontWeight="18"
                android:textSize="17sp"
                android:textStyle="bold"
                tools:textColor="#152957" />

            <TextView
                android:id="@+id/scholaroverview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:textFontWeight="09sp"
                android:textSize="18sp"
                android:text="@string/daad_overview" />

            <TextView
                android:id="@+id/scholardetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="11dp"
                android:layout_marginTop="0dp"
                android:text="Scholarship details and Procedre"
                android:textColor="@color/colorBlue"
                android:textFontWeight="18"
                android:textSize="17sp"
                android:textStyle="bold"
                tools:textColor="#152957" />

            <TextView
                android:id="@+id/graduate_admissions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="30dp"
                android:textFontWeight="09sp"
                android:textSize="18sp"
                android:layout_marginEnd="30dp"
                android:text="@string/daad_details" />

            <TextView
                android:id="@+id/textscholarlink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="11dp"
                android:layout_marginTop="30dp"
                android:text="Link "
                android:textColor="@color/colorBlue"
                android:textFontWeight="18"
                android:textSize="17sp"
                android:textStyle="bold"
                tools:textColor="#152957" />

            <TextView
                android:id="@+id/scholarlink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:linksClickable="true"
                android:autoLink="web"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="30dp"
                android:layout_marginStart="30dp"
                android:textFontWeight="13sp"
                android:textSize="18sp"
                android:layout_marginEnd="30dp"
                android:text="@string/daad_details_link" />


        </LinearLayout>
    </ScrollView>
</RelativeLayout>